--- a/index.html
+++ b/index.html
@@ -9,31 +9,10 @@
 <body>
     <div class="container">
         <h1>Recipe Cost Calculator</h1>
-        <table id="ingredientsTable">
-            <thead>
-                <tr>
-                    <th>Ingredient</th>
-                    <th>Quantity Needed</th>
-                    <th>Unit</th>
-                    <th>Price per Unit (AED)</th>
-                    <th>Cost for Recipe (AED)</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Rows will be added here dynamically -->
-            </tbody>
-        </table>
-        <button onclick="addIngredient()">Add Ingredient</button>
-        <div class="summary">
-            <label for="totalServings">Total Servings:</label>
-            <input type="number" id="totalServings" value="1" min="1" onchange="calculateTotal()">
-            <p>Total Cost: AED <span id="totalCost">0.00</span></p>
-            <p>Cost per Serving: AED <span id="costPerServing">0.00</span></p>
-            <label for="sellingPrice">Selling Price per Serving (AED):</label>
-            <input type="number" id="sellingPrice" value="0" min="0" onchange="calculateProfit()">
-            <p>Estimated Profit per Serving: AED <span id="profitPerServing">0.00</span></p>
+        <div id="recipeList">
+            <!-- Recipe items will be added here dynamically -->
         </div>
+        <button onclick="addRecipe()">Add New Recipe</button>
     </div>
     <script src="script.js"></script>
 </body>
